<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".ServiceActivity">

    <ImageView
        android:id="@+id/ivService"
        android:layout_width="547dp"
        android:layout_height="1510dp"
        android:src="@drawable/snake_demon"
        tools:layout_editor_absoluteX="-85dp"
        tools:layout_editor_absoluteY="-406dp" />

    <TextView
        android:id="@+id/tvService"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/service"
        android:textColor="@color/colorBlack"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivShipping"
        android:layout_width="100dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_baseline_local_shipping_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvService" />

    <TextView
        android:id="@+id/tvShipping"
        android:layout_width="271dp"
        android:layout_height="87dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/white"
        android:text="@string/shipping"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="27sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/ivShipping"
        app:layout_constraintTop_toBottomOf="@id/tvService" />

    <ImageView
        android:id="@+id/ivPhone"
        android:layout_width="100dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivShipping" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="271dp"
        android:layout_height="87dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="27sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/ivPhone"
        app:layout_constraintTop_toBottomOf="@id/tvShipping" />

    <ImageView
        android:id="@+id/ivSchool"
        android:layout_width="100dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:src="@drawable/ic_baseline_school_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPhone" />

    <TextView
        android:id="@+id/tvSchool"
        android:layout_width="271dp"
        android:layout_height="87dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:text="@string/school"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="27sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/ivSchool"
        app:layout_constraintTop_toBottomOf="@id/tvPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>